fixed country flag image overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -331,6 +331,10 @@ a {
     padding: 20px;
 }
 
+.Flag {
+    width: 60vw;
+}
+
 .Space {
     margin-top: 12px;
 }
@@ -665,6 +669,10 @@ a {
 
     .CoatOfArms, .Flag {
         padding: 20px;
+    }
+
+    .Flag {
+        width: 60vw;
     }
 
     .Space {
